# GamedevResourcePackerTestProject

./: .gitignore  CMakeLists.txt  README.md
Assets/Maps/: Level1.xml
Assets/ObjectSets/: Default.xml
Assets/TileSets/: Default.xml
Config/DataObjectClasses/: MapObject.xml  MapObjectPrefab.xml  MapObjectSet.xml  Tile.xml  TileMap.xml  TileSet.xml
Game/: CMakeLists.txt  Main.cpp
